[package]
name = "dioxus-todo"
version = "0.1.0"
authors = ["Tosei <359387050@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web"] }
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"
console_error_panic_hook = "0.1.7"
